# tastrabot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
src/trading_bot/: __main__.py  config.py  main.py  telegram_bot.py
src/trading_bot/adapters/notify/: telegram_client.py
src/trading_bot/adapters/storage/: store.py  supabase_store.py
src/trading_bot/commands/: handlers.py
src/trading_bot/observability/: health.py  logging.py
supabase/: schema.sql
tests/: test_command_handlers.py  test_config.py  test_import.py  test_supabase_store.py
